fix the style issue

--- a/src/main/webapp/WEB-INF/views/common/header.html
+++ b/src/main/webapp/WEB-INF/views/common/header.html
@@ -4,7 +4,7 @@
    <!-- mini logo for sidebar mini 50x50 pixels -->
    <span class="logo-mini"><b>${(systemSubName)!'AD'}</b></span>
    <!-- logo for regular state and mobile devices -->
-   <span class="logo-lg"><b>${(systemName)!'AdminLTE-admin'}</b></span>
+   <span class="logo-lg"><b>${(systemName)!'springmvc-admin'}</b></span>
  </a>
 
  <!-- Header Navbar -->
